--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,22 @@
+# Mobs Drop Heads Configuration
+#
 # Enabled Mobs
+#
 Skeleton: true
 Zombie: true
 Creeper: true
 Wither Skeleton: false
 Player: true
-# Drop Chances
-# 1 out of...
+#
+# Drop chance is a percentage
+# For example, "Skeleton Drop Chance: 50" would be a 50% drop chance.
+#
 Skeleton Drop Chance: 10
 Zombie Drop Chance: 10
 Creeper Drop Chance: 10
-Wither Skeleton Drop Chance: 20
-Player Drop Chance: 1
+Wither Skeleton Drop Chance: 4
+Player Drop Chance: 100
+#
 # Mobs have to be killed with a stone, iron, gold, or diamond sword to drop their head
+#
 Heads Require Swords: true
